# aero-bloodchain

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: cache_isochrones.py  convert_csv_to_json.py  geocode_csv_addresses.py  load_data.py  simplify_isochrones.py
src/: __init__.py  config.py  main.py
src/analytics/: __init__.py  data_qa.py  stats.py
src/database/: __init__.py  db_manager.py  models.py
src/forms/: __init__.py  generator.py
src/forms/templates/: .gitkeep
src/geo/: __init__.py  elevation_profile.py
src/qa_bot/: __init__.py  embeddings.py  manual_qa.py
src/visualization/: __init__.py  charts.py  elevation_profile_page.py  map_view.py
